--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918'
 - !lcc 'D501'
+- GITenberg
 title: A School History of the Great War
 url: http://www.gutenberg.org/ebooks/17211
